test/domains/neth/mismatchTuples.good
mismatchTuples.chpl:1: error: Ranges defined using bounds of type '2*int(64)..3*int(64)' are not currently supported
